--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,14 @@ android {
             path "CMakeLists.txt"
         }
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'mips64'
+            universalApk false
+        }
+    }
 }
 
 dependencies {
